--- a/source/_sass/_base2.scss
+++ b/source/_sass/_base2.scss
@@ -1,6 +1,9 @@
-.card2-list {
-  position: relative;
+.card2-row {
   width: 100%;
+  position: relative;
+}
+
+.card2-container {
 }
 
 .card2 {
@@ -14,7 +17,22 @@
   -webkit-transition: all 500ms ease-in-out;
   z-index: 0;
   top: 0;
+}
+
+.card2:nth-of-type(1) {
   left: 0;
+}
+
+.card2:nth-of-type(2) {
+  left: 25vw;
+}
+
+.card2:nth-of-type(3) {
+  left: 50vw;
+}
+
+.card2:nth-of-type(4) {
+  left: 75vw;
 }
 
 .card2.card2-collapsed {
@@ -24,13 +42,13 @@
 .card2.card2-detached {
   width: 27vw;
   height: 27vw;
-  top: -1vw;
-  left: -1vw;
+  margin-top: -1vw;
+  margin-left: -1vw;
   box-shadow: 2px 2px 12px rgba(black, .2);
 }
 
 .card2.card2-expanded {
   left: 0;
+  margin-left: 0;
   width: 100%;
-  z-index: 11;
 }
