--- a/source/_sass/_base2.scss
+++ b/source/_sass/_base2.scss
@@ -1,45 +1,29 @@
 .card2-row {
-  width: 100%;
-  position: relative;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.card2-container {
+.card-container {
+  width: 25vw;
+  position: relative;
+  height: 25vw;
 }
 
 .card2 {
   cursor: pointer;
-  position: absolute;
+  width: 25vw;
   height: 25vw;
   padding: 15px;
   border: 1px solid #ccc;
   background-color: #fafafa;
-  transition: width 500ms ease-in-out;
-  -webkit-transition: all 500ms ease-in-out;
+  transition: width 300ms ease-in-out;
+  -webkit-transition: all 300ms ease-in-out;
   z-index: 0;
-  top: 0;
-}
-
-.card2:nth-of-type(1) {
-  left: 0;
-}
-
-.card2:nth-of-type(2) {
-  left: 25vw;
-}
-
-.card2:nth-of-type(3) {
-  left: 50vw;
-}
-
-.card2:nth-of-type(4) {
-  left: 75vw;
-}
-
-.card2.card2-collapsed {
-  width: 25vw;
+  position: absolute;
 }
 
 .card2.card2-detached {
+  position: absolute;
   width: 27vw;
   height: 27vw;
   margin-top: -1vw;
@@ -48,7 +32,22 @@
 }
 
 .card2.card2-expanded {
-  left: 0;
-  margin-left: 0;
-  width: 100%;
+  width: 100vw;
+  z-index: 11;
+}
+
+.card-container:nth-of-type(4n) .card2-expanded {
+  margin-left: -75vw;
+}
+
+.card-container:nth-of-type(4n+1) .card2-expanded {
+  margin-left: 0vw;
+}
+
+.card-container:nth-of-type(4n+2) .card2-expanded {
+  margin-left: -25vw;
+}
+
+.card-container:nth-of-type(4n+3) .card2-expanded {
+  margin-left: -50vw;
 }
