--- a/source/_sass/_base.scss
+++ b/source/_sass/_base.scss
@@ -1,76 +1,101 @@
-.card--category {
-  font-weight: bold;
-}
+$main-color: #008ab3;
 
-#overlay {
-  background-color: rgba(black, .5);
-}
-.card-list {
+.card-row {
   display: flex;
   flex-wrap: wrap;
 }
 
-.card {
-  flex: 0 0 25vw;
-  height: 25vw;
+.card-container {
+  width: 25vw;
   position: relative;
-
-  .card__inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    padding: 30px;
-    border: 1px solid rgba(black, .2);
-    background-color: white;
-    animation-name: card_1;
-    animation-iteration-count: 1;
-    animation-duration: 600ms;
-    animation-fill-mode: none;
-  }
+  height: 25vw;
 }
 
-.js-card-collapsed {
-  .card__inner {
-    width: 25vw;
-    height: 25vw;
-    top: 0;
-    animation-direction: reverse;
-  }
+.card {
+  cursor: pointer;
+  width: 25vw;
+  height: 25vw;
+  padding: 15px;
+  border-top: 1px solid rgba(black, .2);
+  border-right: 1px solid rgba(black, .2);
+  transition: width 300ms ease-in-out;
+  -webkit-transition: all 300ms ease-in-out;
+  z-index: 0;
+  position: absolute;
 }
 
-.js-card-expanded {
-  .card__inner {
-    left: -25vw;
+.card.card-detached {
+  position: absolute;
+  width: 27vw;
+  height: 27vw;
+  margin-top: -1vw;
+  margin-left: -1vw;
+  box-shadow: 2px 2px 12px rgba(black, .2);
+}
+
+.card.card-expanded {
+  width: 100vw;
+  z-index: 11;
+  border: 1px solid rgba(black, .2);
+}
+
+.card-container:nth-of-type(4n+1) .card-expanded { margin-left: 0vw; }
+.card-container:nth-of-type(4n+2) .card-expanded { margin-left: -25vw; }
+.card-container:nth-of-type(4n+3) .card-expanded { margin-left: -50vw; }
+.card-container:nth-of-type(4n) .card-expanded { margin-left: -75vw; }
+
+
+.card--main-color { 
+  background-color: $main-color; 
+  color: white;
+
+  
+}
+
+.card {
+  overflow: hidden;
+
+  &__content {
+    width: calc(100vw - 60px);
+    display: flex;
+  }
+
+  &__summary {
+    flex: 1;
+    padding: 20px 40px 20px 20px;
+  }
+
+  .card__extra-content {
+    flex: 3;
+    padding: 20px;
+    transition: opacity 500ms ease-in-out 200ms;
+  }
+
+  h3 {
+    font-size: 1.2rem;
+    margin: 0;
+  }
+  
+}
+
+.card-expanded {
+  .card__content {
     width: 100vw;
-    top: -1vw;
-    height: 27vw;
-    box-shadow: 2px 2px 12px rgba(black, .2);
-    z-index: 11;
-    animation-direction: normal;
+    opacity: 1;
   }
 
+  .card__summary {
+    
+  }
+
+  .card__extra-content {
+    opacity: 1;
+    transition: opacity 500ms ease-in-out 200ms;
+  }
 }
 
-@keyframes card_1 {
-  0% {
-    top: 0;
-    left: 0;
-    width: 25vw;
-    height: 25vw;
-  }
-  40% {
-    box-shadow: 2px 2px 12px rgba(black, .2);
-    left: -1vw;
-    top: -1vw;
-    width: 27vw;
-    height: 27vw;
-  }
 
-  100% {
-    left: -25vw;
-    width: 100vw;
-    top: -1vw;
-    height: 27vw;
-    box-shadow: 2px 2px 12px rgba(black, .2);
-  }
-}
+
+
+
+
